client/styles/styles.css
.login-content {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.login-btn {
  display: inline-block;
  width: 200px;
  color: #333;
}

input[type='submit'].login-btn:hover {
  cursor: pointer;
  color: red;
}

.board-embed-frame {
  width: 700px;
  height: 450px;
  background-color: gray;
  margin-bottom: 20px;
  padding: 40px;
  box-shadow: 5px 2px 2px 1px #555;
}

.board-embed-container button {
  display: block;
  margin-bottom: 15px;
}

.center-container {
  width: 1000px;
  margin: 50px auto;
}

.the-query-display {
  height: 200px;
  width: 800px;
  background-color: white;
  padding-top: 10px;
}

.the-query-display ul {
  list-style: none;
}

body {
  background-color: lightgray;
}

h1 {
  color: #000;
}

